# MLC_Overview

./: .gitmodules  README.md
CodeSamples/: EndToEndModel.ipynb
MLC_Model_CPP/: CMakeLists.txt  README.md  clone_mlc_repo.sh  compile_threaded_engine.sh  threaded_engine_interface.cc
MLC_Model_CPP/JordanAI-bassAndChords-v0.1-MLCLLM/: MLCModel.dylib  mlc-chat-config.json  ndarray-cache.json  tokenizer.json
MLC_Model_Python/: mlcEngineInference.py
TVM_Samples_Python/: TensorIROverview.ipynb
